src/components/Nav/style.scss
@import '../../styles/core';

.component {
  display: flex;
  justify-content: center;
}

.link {
  margin: 0 12px;
  font-size: 1.8rem;
  text-decoration: none;
  color: map-get($colors , gray500);

  &:hover {
    color: map-get($colors , gray700);
  }
}

.link.linkActive {
  color: map-get($colors , gray900);
  text-decoration: line-through;
}

